 * Fix crash when changing range of broken axes interactively
 * Fix object deletion crash in setting menu
 * Check output dataset is not same as an input for histograms
 * Fix for compilation on Qt 4.6
 * Catch socket errors on embed client
 * Fixes for formatting strings, including fixes for arguments of
   the extended %Vg format and properly supporting %%

Changes in 1.20:
 * Add HDF5 file data import
 * Allow expressions to be edited for linked 2D datasets
 * Add support for 2D datasets with irregular gridpoints
 * Add 2D data CSV import
 * Allow safe renaming of linked datasets
 * Support importing text from FITS files

Bug fixes:
 * When capturing data from a file/named pipe, do not stop when no
   more data are available
 * Fixes mangling of text in saved files using Windows binary
 * Fix encoding for standard file import
 * Fix FITS import for python3

Changes in 1.19.1:
 * Add option to disable scaling of marker border with point scaling
 * Implement label at-minimum/at-maximum for ternary plot
 * Add border and background fill settings for text label widget
 * Enable FITS support with astropy

Bug fixes:
 * Fix broken drag and drop in documents
 * Fix deleted C/C++ object crash when using undo and in tutorial
 * Fix compilation in MSVC for Python 3
 * Remove warning/error in compilation in gcc in SUSE
 * Add Python version classifiers
 * Fix document icons in Windows binary
 * Error bars can be plotted incorrectly for histogrammed data

Changes in 1.19:
 * Make code compatible with python3
 * Separation of python module and resources in source package
   (packagers may need to consult INSTALL)
 * Move to v2 of PyQt API
 * Remove deprecated numpy API from helpers module
 * Allow FITS dataset names to be blank if prefix/suffix are not
 * New ast-based code security checker
 * Picker uses 1-based index for consistency
 * Allow non-text datasets to be used for labels
 * Add number->text conversion dataset plugin
 * Add binning dataset plugin